[metadata]
name = pycyto
version = 0.1.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/cytometry-ratios
description = prototyping of whole slide cytometer
keywords =
  cytometry
  microscopy
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  matplotlib
  seaborn
  scikit-image
  scipy
  imageio
  tifffile

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
